Remove unneeded "--add-opens=java.base/java.lang=ALL-UNNAMED"
Closes #2997