@@ -144,10 +144,6 @@ class CommandLineTestRunner(
                         .getProperty("java.specification.version")
                         .javaVersionAsInt()
                         ?.let { javaVersion ->
-                            if (javaVersion >= 16) {
-                                // https://docs.gradle.org/7.5/userguide/upgrading_version_7.html#removes_implicit_add_opens_for_test_workers
-                                add("--add-opens=java.base/java.lang=ALL-UNNAMED")
-                            }
                             if (javaVersion >= 24) {
                                 // Suppress warning "sun.misc.Unsafe::objectFieldOffset" on Java24+ (https://github.com/pinterest/ktlint/issues/2973)
                                 add("--sun-misc-unsafe-memory-access=allow")
